# verimat

./: CMakeLists.txt  README.md
main/: CMakeLists.txt
main/src/: main.cpp
programs/: fibonacci.vml  helloworld.vml  reverse.vml  sierpinski.vml  tree.vml  wc.vml
verimatlang/: CMakeLists.txt
verimatlang/include/verimatlang/: interpreter.hpp  io.hpp  parser.hpp
verimatlang/src/: interpreter.cpp  io.cpp  parser.cpp
verimatlang/tests/: interpreter_test.cpp  parser_test.cpp
